tests/snapshots/compiler_error_fixtures/instance_missing_method.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/instance_missing_method.flx
== compile ==
failed (compile)
== diagnostics ==
error[E442]: Missing Instance Method

Missing method `value` in instance `Describable`.

  examples/compiler_errors/instance_missing_method.flx:12:1
   |
12 | instance Describable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |     fn name(x) { x }
   | ^^^^^^^^^^^^^^^^^^^^
14 | }
   | ^

Hint:
  `Describable` requires: fn value(...)
== stdout ==
<not executed>
